--- a/lab-1-lists-and-tuples.ipynb
+++ b/lab-1-lists-and-tuples.ipynb
@@ -811,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "id": "bd6d04d7",
    "metadata": {},
    "outputs": [
@@ -828,7 +828,7 @@
    ],
    "source": [
     "mixed_tuple = (10,'hello',2.5,True)\n",
-    "mixed_tuple"
+    "mixed_tuple\n"
    ]
   }
  ],
