--- a/lab-3-numpy-basics.ipynb
+++ b/lab-3-numpy-basics.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
    "id": "54f0ad75",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 35,
    "id": "5c3de849",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 36,
    "id": "191be9a2",
    "metadata": {},
    "outputs": [
@@ -58,7 +58,7 @@
        "list"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 37,
    "id": "b525dea3",
    "metadata": {},
    "outputs": [],
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 38,
    "id": "024b9457",
    "metadata": {},
    "outputs": [
@@ -89,7 +89,7 @@
        "(3,)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 39,
    "id": "fa50d8dd",
    "metadata": {},
    "outputs": [
@@ -119,7 +119,7 @@
        "       [4, 5, 6]])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 40,
    "id": "2516b99d",
    "metadata": {},
    "outputs": [
@@ -144,7 +144,7 @@
        "(2, 3)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 41,
    "id": "fbfdf04d",
    "metadata": {},
    "outputs": [
@@ -167,7 +167,7 @@
        "       [3, 6]])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 42,
    "id": "002176ea",
    "metadata": {},
    "outputs": [],
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 43,
    "id": "a1220e80",
    "metadata": {},
    "outputs": [
@@ -200,7 +200,7 @@
        "       [3, 6]])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 44,
    "id": "84c26c3e",
    "metadata": {},
    "outputs": [
@@ -221,7 +221,7 @@
        "array([5, 7, 9])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,27 +240,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 45,
    "id": "8cbc9ae9",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "cannot use 'list' as a set element (unhashable type: 'list')",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[28]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m resistance = np.array({\n\u001b[32m      2\u001b[39m     [\u001b[32m10.6\u001b[39m,\u001b[32m9.1\u001b[39m,\u001b[32m9.3\u001b[39m,\u001b[32m9.8\u001b[39m,\u001b[32m10.5\u001b[39m,\u001b[32m10.4\u001b[39m,\u001b[32m9.5\u001b[39m,\u001b[32m11\u001b[39m,\u001b[32m10.4\u001b[39m,\u001b[32m3\u001b[39m,\u001b[32m9.8\u001b[39m], \u001b[38;5;66;03m#Jaguar\u001b[39;00m\n\u001b[32m      3\u001b[39m     [\u001b[32m10.1\u001b[39m,\u001b[32m11\u001b[39m,\u001b[32m9.1\u001b[39m,\u001b[32m20\u001b[39m,\u001b[32m9.2\u001b[39m,\u001b[32m10.8\u001b[39m,\u001b[32m9.9\u001b[39m,\u001b[32m9.2\u001b[39m,\u001b[32m9.1\u001b[39m,\u001b[32m9.1\u001b[39m,np.nan] \u001b[38;5;66;03m#Panther\u001b[39;00m\n\u001b[32m      4\u001b[39m })\n",
-      "\u001b[31mTypeError\u001b[39m: cannot use 'list' as a set element (unhashable type: 'list')"
-     ]
+     "data": {
+      "text/plain": [
+       "array([[10.6,  9.1,  9.3,  9.8, 10.5, 10.4,  9.5, 11. , 10.4,  3. ,  9.8],\n",
+       "       [10.1, 11. ,  9.1, 20. ,  9.2, 10.8,  9.9,  9.2,  9.1,  9.1,  nan]])"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "resistance = np.array({\n",
+    "resistance = np.array([\n",
     "    [10.6,9.1,9.3,9.8,10.5,10.4,9.5,11,10.4,3,9.8], #Jaguar\n",
     "    [10.1,11,9.1,20,9.2,10.8,9.9,9.2,9.1,9.1,np.nan] #Panther\n",
-    "})"
+    "])\n",
+    "resistance"
    ]
   },
   {
@@ -268,8 +269,22 @@
    "execution_count": null,
    "id": "23a4ce44",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([9.4, nan])"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Mean\n",
+    "np.mean(resistance,axis=1)\n"
+   ]
   }
  ],
  "metadata": {
