--- a/lab-3-numpy-basics.ipynb
+++ b/lab-3-numpy-basics.ipynb
@@ -19,13 +19,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 66,
+   "id": "33072ec5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# %pip install numpy --upgrade\n",
+    "# %pip install scipy --upgrade"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "0fa5cda7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# %pip install --upgrade pip"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
    "id": "54f0ad75",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#imports and packages\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from scipy import stats\n",
+    "from statistics import multimode"
    ]
   },
   {
@@ -38,49 +60,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 69,
    "id": "5c3de849",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "my_array = [1,2,3]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "id": "191be9a2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "list"
+       "array([1, 2, 3])"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "type(my_array)"
+    "array_a = np.array([1, 2, 3])\n",
+    "array_a"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "b525dea3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "my_array = np.array([1,2,3])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "id": "024b9457",
+   "execution_count": 70,
+   "id": "191be9a2",
    "metadata": {},
    "outputs": [
     {
@@ -89,13 +92,56 @@
        "(3,)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.shape(my_array)"
+    "np.shape(array_a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "b525dea3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[4, 5, 6]])"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "array_b = np.array([[4, 5, 6]])\n",
+    "array_b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "024b9457",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 3)"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.shape(array_b)"
    ]
   },
   {
@@ -108,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 73,
    "id": "fa50d8dd",
    "metadata": {},
    "outputs": [
@@ -119,22 +165,20 @@
        "       [4, 5, 6]])"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "my_array = np.array([\n",
-    "    [1,2,3],\n",
-    "    [4,5,6]\n",
-    "])\n",
+    "my_array = np.array([[1, 2, 3],\n",
+    "                     [4, 5, 6]])\n",
     "my_array"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 74,
    "id": "2516b99d",
    "metadata": {},
    "outputs": [
@@ -144,7 +188,7 @@
        "(2, 3)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 75,
    "id": "fbfdf04d",
    "metadata": {},
    "outputs": [
@@ -167,67 +211,35 @@
        "       [3, 6]])"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "my_array.T"
+    "t_array = my_array.T\n",
+    "t_array"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 76,
    "id": "002176ea",
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "trans_array = my_array.T"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "id": "a1220e80",
-   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[1, 4],\n",
-       "       [2, 5],\n",
-       "       [3, 6]])"
+       "(3, 2)"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "trans_array\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "id": "84c26c3e",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([5, 7, 9])"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.sum(trans_array,axis=1)"
+    "np.shape(t_array)"
    ]
   },
   {
@@ -240,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 77,
    "id": "8cbc9ae9",
    "metadata": {},
    "outputs": [
@@ -251,7 +263,7 @@
        "       [10.1, 11. ,  9.1, 20. ,  9.2, 10.8,  9.9,  9.2,  9.1,  9.1,  nan]])"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,8 +278,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "id": "23a4ce44",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2, 11)"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.shape(resistance)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "ed740a2d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[10.6, 10.1],\n",
+       "       [ 9.1, 11. ],\n",
+       "       [ 9.3,  9.1],\n",
+       "       [ 9.8, 20. ],\n",
+       "       [10.5,  9.2],\n",
+       "       [10.4, 10.8],\n",
+       "       [ 9.5,  9.9],\n",
+       "       [11. ,  9.2],\n",
+       "       [10.4,  9.1],\n",
+       "       [ 3. ,  9.1],\n",
+       "       [ 9.8,  nan]])"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "resistance.T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "d559663e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([10.35, 10.05,  9.2 , 14.9 ,  9.85, 10.6 ,  9.7 , 10.1 ,  9.75,\n",
+       "        6.05,   nan])"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mean(resistance, axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "717e3caa",
    "metadata": {},
    "outputs": [
     {
@@ -276,14 +362,430 @@
        "array([9.4, nan])"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Mean\n",
-    "np.mean(resistance,axis=1)\n"
+    " np.mean(resistance, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "ee942c00",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 9.4 , 10.75])"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.nanmean(resistance, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "10183ff9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Jaguar_mean = 9.40 ohms\n",
+      "Panther_mean = 10.75 ohms\n"
+     ]
+    }
+   ],
+   "source": [
+    "jag_mean = np.nanmean(resistance, axis=1)[0]\n",
+    "pan_mean = np.nanmean(resistance, axis=1)[1]\n",
+    "print(f'\\nJaguar_mean = {jag_mean:.2f} ohms')\n",
+    "print(f'Panther_mean = {pan_mean:.2f} ohms')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "882b0502",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nanmedian_result = np.nanmedian(resistance, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "721f52ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Jaguar_median = 9.80 ohms\n",
+      "Panther_median = 9.55 ohms\n"
+     ]
+    }
+   ],
+   "source": [
+    "jag_median = np.nanmedian(resistance, axis=1)[0]\n",
+    "pan_median = np.nanmedian(resistance, axis=1)[1]\n",
+    "print(f'\\nJaguar_median = {jag_median:.2f} ohms')\n",
+    "print(f'Panther_median = {pan_median:.2f} ohms')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "25ecb9f6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ModeResult(mode=array([9.8, 9.1]), count=array([2, 3]))"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stats.mode(resistance, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "ec83c819",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2]"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_array = [1,1,2,2,3,4,5]\n",
+    "multimode(my_array)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "d2ff07ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jaguar mode:\n",
+      "9.8 ohms\n",
+      "10.4 ohms\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "jag_res = resistance[0]\n",
+    "\n",
+    "print(\"Jaguar mode:\")\n",
+    "for i in multimode(jag_res):\n",
+    "    print(f'{i} ohms')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "95cc1f49",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Panther mode:\n",
+      "9.1 ohms\n"
+     ]
+    }
+   ],
+   "source": [
+    "pan_res = resistance[1]\n",
+    "\n",
+    "print(\"Panther mode:\")\n",
+    "for i in multimode(pan_res):\n",
+    "    print(f'{i} ohms')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "492abfe0",
+   "metadata": {},
+   "source": [
+    "# Measures of Variablitiy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "6ef065a4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[10.6,  9.1,  9.3,  9.8, 10.5, 10.4,  9.5, 11. , 10.4,  3. ,  9.8],\n",
+       "       [10.1, 11. ,  9.1, 20. ,  9.2, 10.8,  9.9,  9.2,  9.1,  9.1,  nan]])"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "resistance = np.array([\n",
+    "    [10.6, 9.1, 9.3, 9.8, 10.5, 10.4, 9.5, 11, 10.4, 3, 9.8],\n",
+    "    [10.1, 11, 9.1, 20, 9.2, 10.8, 9.9, 9.2, 9.1, 9.1, np.nan]\n",
+    "])\n",
+    "resistance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "0e7d5698",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 8. , 10.9])"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res_max = np.nanmax(resistance, axis=1)\n",
+    "res_min = np.nanmin(resistance, axis=1)\n",
+    "\n",
+    "res_range = res_max - res_min\n",
+    "res_range"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "81d8b94d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jaguar_range = 8.00 ohms\n",
+      "Panther_range = 10.90 ohms\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'Jaguar_range = {res_range[0]:.2f} ohms')\n",
+    "print(f'Panther_range = {res_range[1]:.2f} ohms')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "d86d6376",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([9.4  , 9.125])"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res_Q1 = np.nanpercentile(resistance, 25, axis=1)\n",
+    "res_Q1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "id": "9d04088b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([9.8 , 9.55])"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res_Q2 = np.nanpercentile(resistance, 50, axis=1)\n",
+    "res_Q2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "2a76ec08",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([10.45 , 10.625])"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res_Q3 = np.nanpercentile(resistance, 75, axis=1)\n",
+    "res_Q3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "id": "1d6ff705",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jaguar IQR = 1.05 ohms\n",
+      "Panther IQR = 1.50 ohms\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'Jaguar IQR = {res_Q3[0] - res_Q1[0]:.2f} ohms')\n",
+    "print(f'Panther IQR = {res_Q3[1] - res_Q1[1]:.2f} ohms')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "id": "d3a56267",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 4.86      , 11.08277778])"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res_var = np.nanvar(resistance, ddof=1, axis=1)\n",
+    "res_var"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "id": "a226a5f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jaguar Variance = 4.86 ohms\n",
+      "Panther Variance = 11.08 ohms\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'Jaguar Variance = {res_var[0]:.2f} ohms')\n",
+    "print(f'Panther Variance = {res_var[1]:.2f} ohms')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "cba02742",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2.20454077, 3.32908062])"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res_std = np.nanstd(resistance,ddof=1,axis=1)\n",
+    "res_std"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "id": "e65cc27b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jaguar Standard Deviation = 2.20 ohms\n",
+      "Panther Standard Deviation = 3.33 ohms\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'Jaguar Standard Deviation = {res_std[0]:.2f} ohms')\n",
+    "print(f'Panther Standard Deviation = {res_std[1]:.2f} ohms')"
    ]
   }
  ],
